correction of text alignment

--- a/assets/sass/templates/_homepage.scss
+++ b/assets/sass/templates/_homepage.scss
@@ -47,7 +47,7 @@
       height: auto;
       max-width: 120px;
       display: inline-block;
-      text-align: center;
+      text-align: left;
 
       h4 {
         margin: 0px;
